--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,14 @@
   padding: 0;
 }
 
+body {
+  background-color: rgb(150, 187, 233);
+}
+
 .board {
+  margin: 20px auto;
+  background-color: black;
+  box-shadow: 3px 3px 10px rgb(0, 0, 0);
   display: grid;
   width: max-content;
   gap: 2px;
@@ -13,8 +20,8 @@
   grid-auto-rows: 20px;
 }
 
-.boardSpace {
-  background-color: black;
+.board > div {
+  background-color: white;
 }
 
 .boardSpace.ship {
