Add gamestate message to GUI

--- a/src/style.css
+++ b/src/style.css
@@ -56,11 +56,19 @@ main {
   font-size: 1.2rem;
 }
 
+.game {
+  font-size: calc(var(--gridSize) * 0.8);
+}
+
+.lastAttack,
+.currentTurn {
+  text-align: center;
+}
+
 .playerContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: calc(var(--gridSize) * 0.8);
 }
 
 .board {
