--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,34 @@ main {
   padding: 5px;
 }
 
+.singleShipPlacementForm {
+  margin: 20px 0;
+  display: flex;
+  border: 1px solid black;
+  gap: 5px;
+  padding: 5px;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.singleShipPlacementForm > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.singleShipPlacementForm select {
+  font-size: 1.3em;
+  flex: 1;
+  text-align: center;
+}
+
+.singleShipPlacementForm input[type="number"] {
+  text-align: center;
+  width: 3em;
+  flex: 1;
+}
+
 .gamemodeBtn,
 .startBtn,
 .placeShipsBtn {
@@ -72,7 +100,8 @@ main {
 }
 
 .rematchBtn,
-.newGameBtn {
+.newGameBtn,
+.shipPlacementBtn {
   font-size: 1em;
   padding: 5px;
 }
@@ -84,7 +113,7 @@ main {
 }
 
 .board {
-  margin: 10px 0;
+  margin: 10px auto;
   background-color: black;
   box-shadow: 3px 3px 10px rgb(0, 0, 0);
   display: grid;
