--- a/src/style.css
+++ b/src/style.css
@@ -51,9 +51,9 @@ main {
 .singleShipPlacementForm {
   margin: 20px 0;
   display: flex;
-  border: 1px solid black;
   gap: 5px;
   padding: 5px;
+  border: 1px solid black;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.1);
 }
@@ -116,6 +116,12 @@ main {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+}
+
+.boardShips > * {
+  margin: 0 5px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .board {
