--- a/src/style.css
+++ b/src/style.css
@@ -87,39 +87,41 @@ main {
 }
 
 .shipPreview {
+  flex: 0;
   display: flex;
   gap: 5px;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
-.shipPlacementForm {
-  margin-top: 20px;
-  display: flex;
-  gap: 5px;
-  padding: 5px;
+.shipsContainer {
   border: 1px solid black;
   border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.shipPlacementForm > div {
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
-.shipPlacementForm select {
-  font-size: 1em;
-  flex: 1;
-  text-align: center;
+.dragableShip {
+  cursor: pointer;
+  background-color: black;
+  box-shadow: 3px 3px 10px rgb(0, 0, 0);
+  display: grid;
+  width: max-content;
+  gap: 2px;
+  padding: 2px;
+  grid-auto-flow: column;
+  grid-auto-columns: var(--gridSize);
+  grid-auto-rows: var(--gridSize);
 }
 
-.shipPlacementForm input[type="number"] {
-  width: 4em;
-  flex: 1;
-  text-align: center;
-  font-size: 1em;
+.dragableShipSpace {
+  background-color: grey;
 }
 
 .game,
