Hide cursor when dragging ships

--- a/src/style.css
+++ b/src/style.css
@@ -114,7 +114,7 @@ main {
 }
 
 .dragableShip {
-  cursor: pointer;
+  cursor: grab;
   background-color: black;
   box-shadow: 3px 3px 10px rgb(0, 0, 0);
   display: grid;
